--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -43,7 +43,7 @@ x-airflow-common: &airflow-common
     # In order to add custom dependencies or upgrade provider packages you can use your extended image.
     # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
     # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-    image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.2}
+    image: ${AIRFLOW_IMAGE_NAME:-extending_airflow:latest}
     # build: .
     environment: &airflow-common-env
         AIRFLOW__CORE__EXECUTOR: LocalExecutor
@@ -55,11 +55,13 @@ x-airflow-common: &airflow-common
         AIRFLOW__CORE__LOAD_EXAMPLES: "false"
         AIRFLOW__API__AUTH_BACKENDS: "airflow.api.auth.backend.basic_auth"
         _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+        DEPLOYMENT: "dev"
     volumes:
         - ./dags:/opt/airflow/dags
         - ./logs:/opt/airflow/logs
         - ./plugins:/opt/airflow/plugins
         - ../data:/opt/airflow/data
+        - ../dbt:/opt/airflow/dbt
     user: "${AIRFLOW_UID:-50000}:0"
     depends_on: &airflow-common-depends-on
         postgres:
