chore: add redash in airflow docker-compose file

--- a/airflow/.env
+++ b/airflow/.env
@@ -1,1 +1,11 @@
 AIRFLOW_UID=50000
+POSTGRES_USER=airflow
+POSTGRES_PASSWORD=airflow
+POSTGRES_DB=airflow
+PYTHONUNBUFFERED=0
+REDASH_LOG_LEVEL=INFO
+REDASH_REDIS_URL=redis://redis:6379/0
+POSTGRES_PASSWORD=
+REDASH_COOKIE_SECRET=secret
+REDASH_SECRET_KEY=secret
+REDASH_DATABASE_URL=postgresql://airflow:airflow@postgres/dev
