--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -67,13 +67,18 @@ x-airflow-common: &airflow-common
         postgres:
             condition: service_healthy
 
+x-redash-service: &redash-service
+    image: redash/redash:8.0.0.b32245
+    depends_on:
+        - postgres
+        - redis
+    env_file: .env
+    restart: always
+
 services:
     postgres:
         image: postgres:13
-        environment:
-            POSTGRES_USER: airflow
-            POSTGRES_PASSWORD: airflow
-            POSTGRES_DB: airflow
+        env_file: .env
         volumes:
             - postgres-db-volume:/var/lib/postgresql/data
         ports:
@@ -226,6 +231,48 @@ services:
             - bash
             - -c
             - airflow
+
+    server:
+        <<: *redash-service
+        command: server
+        ports:
+            - "5000:5000"
+        environment:
+            REDASH_WEB_WORKERS: 4
+
+    scheduler:
+        <<: *redash-service
+        command: scheduler
+        environment:
+            QUEUES: "celery"
+            WORKERS_COUNT: 1
+
+    scheduled_worker:
+        <<: *redash-service
+        command: worker
+        environment:
+            QUEUES: "scheduled_queries,schemas"
+            WORKERS_COUNT: 1
+
+    adhoc_worker:
+        <<: *redash-service
+        command: worker
+        environment:
+            QUEUES: "queries"
+            WORKERS_COUNT: 2
+    redis:
+        image: redis:5.0-alpine
+        restart: always
+
+    nginx:
+        image: redash/nginx:latest
+        ports:
+            - "80:80"
+        depends_on:
+            - server
+        links:
+            - server:redash
+        restart: always
 
 volumes:
     postgres-db-volume:
